fix corner overflow

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ header .pre-header {
 
 .hero-section .bottom_right_corner {
     height: 275px;
-    bottom: 0;
+    bottom: -1;
     right: 0;
     position: absolute;
 }
